# gcc-sdl3-template

./: CMakeLists.txt  README.md
fui/: CMakeLists.txt  animator_task.cpp  fui.cpp  fui.h  fui_config.h  fui_error.h  irender.h  itask.h  view.h
src/: animator.cpp  animator.h  animator_gen.py  animator_task.h  flower_gen.py  fui.h  fui_config.h  fui_impl.cpp  fui_impl.h  fui_service.cpp  fui_service.h  ianimator.h  itask.cpp  main.bak.cpp  main.cpp  main_anim.cpp  main_draw.cpp  main_image.cpp  main_ui.cpp  singleton.h
